Changed "Shareaza P2P" to "Shareaza"
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6749 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/PluginWizard/Shareaza Image Service Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
+++ b/PluginWizard/Shareaza Image Service Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
@@ -50,7 +50,7 @@ BEGIN
             VALUE "InternalName", "#PROJECT#"
             VALUE "LegalCopyright", "#COPYRIGHT#"
             VALUE "OriginalFilename", "#PROJECT#.dll"
-            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
