--- a/PluginWizard/Shareaza Library Builder Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
+++ b/PluginWizard/Shareaza Library Builder Plugin (Visual Studio 2003, ATL)/#PROJECT#.rc
@@ -50,7 +50,7 @@ BEGIN
             VALUE "InternalName", "#PROJECT#"
             VALUE "LegalCopyright", "#COPYRIGHT#"
             VALUE "OriginalFilename", "#PROJECT#.dll"
-            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
