--- a/plugins/DocumentReader/DocumentReader.rc
+++ b/plugins/DocumentReader/DocumentReader.rc
@@ -76,7 +76,7 @@ BEGIN
             VALUE "InternalName", "DocumentReader"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2007. All rights reserved."
             VALUE "OriginalFilename", "DocumentReader.dll"
-            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
