--- a/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
+++ b/plugins/MediaLibraryBuilder/MediaLibraryBuilder.rc
@@ -88,7 +88,7 @@ BEGIN
             VALUE "InternalName", "MediaLibraryBuilder"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2005-2007. All rights reserved."
             VALUE "OriginalFilename", "MediaLibraryBuilder.dll"
-            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
