--- a/skin-installer/resource.rc
+++ b/skin-installer/resource.rc
@@ -115,7 +115,7 @@ BEGIN
             VALUE "InternalName", "skin-installer"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2007. All rights reserved."
             VALUE "OriginalFilename", "skin.exe"
-            VALUE "ProductName", "Shareaza P2P"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 0, 0"
         END
     END
