Changed product name to real name
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6751 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -157,7 +157,7 @@ BEGIN
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2008. All rights reserved."
             VALUE "OriginalFilename", "Shareaza.exe"
-            VALUE "ProductName", "Shareaza Ultimate File Sharing"
+            VALUE "ProductName", "Shareaza"
             VALUE "ProductVersion", "2, 3, 1, 2"
         END
     END
