Updated project file
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6761 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc7_1/Shareaza.vcproj
+++ b/vc7_1/Shareaza.vcproj
@@ -796,6 +796,9 @@
 				RelativePath="..\shareaza\SharedFolder.cpp">
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareMonkeyData.cpp">
+			</File>
+			<File
 				RelativePath="..\shareaza\ShellIcons.cpp">
 			</File>
 			<File
@@ -2587,6 +2590,9 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\SharedFolder.h">
+			</File>
+			<File
+				RelativePath="..\shareaza\ShareMonkeyData.h">
 			</File>
 			<File
 				RelativePath="..\shareaza\ShellIcons.h">
