Updated project file
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6762 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/vc8_0/Shareaza.vcproj
+++ b/vc8_0/Shareaza.vcproj
@@ -1017,6 +1017,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\shareaza\ShareMonkeyData.cpp"
+				>
+			</File>
+			<File
 				RelativePath="..\shareaza\ShellIcons.cpp"
 				>
 			</File>
@@ -2668,6 +2672,10 @@
 			</File>
 			<File
 				RelativePath="..\shareaza\SharedFolder.h"
+				>
+			</File>
+			<File
+				RelativePath="..\shareaza\ShareMonkeyData.h"
 				>
 			</File>
 			<File
