Fix crash caused by missing format specifier.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6779 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -4058,7 +4058,7 @@ STRINGTABLE
 BEGIN
     IDS_DOWNLOAD_FILENOTFOUND 
                             "Download host %s does not have the file ""%s""."
-    IDS_DOWNLOAD_NOHTTP     "Download host % responded with an invalid HTTP response."
+    IDS_DOWNLOAD_NOHTTP     "Download host %s responded with an invalid HTTP response."
     IDS_DOWNLOAD_HTTPCODE   "Download host %s responded with %s (%s)."
     IDS_DOWNLOAD_WRONG_HASH "Download host %s's version of ""%s"" has a different URN, aborting."
     IDS_DOWNLOAD_WRONG_SIZE "Download host %s's version of ""%s"" has a different length, aborting."
