--- a/vc8_0/skin-installer.vcproj
+++ b/vc8_0/skin-installer.vcproj
@@ -60,7 +60,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
+				PreprocessorDefinitions="WIN32;_DEBUG"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -69,19 +69,17 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)Skin.exe"
-				GenerateManifest="true"
-				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				GenerateDebugInformation="true"
+				KeyFile="$(SolutionDir)..\$(ProjectName)\$(ProjectName).snk"
+				DelaySign="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
-				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=x86, version=1.0.12.5, type=win32"
-				InputResourceManifests="$(OutDir)Skin.exe"
+				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -101,7 +99,7 @@
 			<Tool
 				Name="VCPostBuildEventTool"
 				Description="Installing $(TargetFileName)..."
-				CommandLine="&quot;$(OutDir)\Skin.exe&quot; /install"
+				CommandLine="&quot;$(TargetPath)&quot; /install"
 			/>
 		</Configuration>
 		<Configuration
@@ -146,7 +144,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="_DEBUG"
+				PreprocessorDefinitions="WIN64;_DEBUG"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -155,16 +153,17 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib"
 				OutputFile="$(OutDir)Skin.exe"
-				GenerateManifest="false"
 				GenerateDebugInformation="true"
 				TargetMachine="17"
+				KeyFile="$(SolutionDir)..\$(ProjectName)\$(ProjectName).snk"
+				DelaySign="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=amd64, version=1.0.12.5, type=win32"
+				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -227,7 +226,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
+				PreprocessorDefinitions="WIN32;NDEBUG"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -236,21 +235,19 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="comctl32.lib unicows.lib kernel32.lib advapi32.lib user32.lib gdi32.lib shell32.lib comdlg32.lib version.lib mpr.lib rasapi32.lib winmm.lib winspool.lib vfw32.lib secur32.lib oleacc.lib oledlg.lib sensapi.lib"
 				OutputFile="$(OutDir)Skin.exe"
-				AdditionalManifestDependencies="type=&apos;win32&apos; name=&apos;Microsoft.Windows.Common-Controls&apos; version=&apos;6.0.0.0&apos; processorArchitecture=&apos;x86&apos; publicKeyToken=&apos;6595b64144ccf1df&apos; language=&apos;*&apos;"
 				IgnoreDefaultLibraryNames="kernel32.lib;advapi32.lib;user32.lib;gdi32.lib;shell32.lib;comdlg32.lib;version.lib;mpr.lib;rasapi32.lib;winmm.lib;winspool.lib;vfw32.lib;secur32.lib;oleacc.lib;oledlg.lib;sensapi.lib"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
+				KeyFile="$(SolutionDir)..\$(ProjectName)\$(ProjectName).snk"
+				DelaySign="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AdditionalManifestFiles="$(IntDir)\$(TargetFileName).intermediate.manifest"
-				EmbedManifest="true"
-				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=x86, version=1.0.12.5, type=win32, publicKeyToken=dfbe2673baf698eb"
-				InputResourceManifests="$(OutDir)Skin.exe"
+				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
@@ -269,8 +266,8 @@
 			/>
 			<Tool
 				Name="VCPostBuildEventTool"
-				Description="Signing and installing $(TargetFileName)..."
-				CommandLine="mt.exe -updateresource:&quot;$(OutDir)Skin.exe&quot; -snk:&quot;$(InputDir)..\$(ProjectName)\skin-installer.snk&quot; -nologo&#x0D;&#x0A;&quot;$(OutDir)\Skin.exe&quot; /install&#x0D;&#x0A;"
+				Description="Installing $(TargetFileName)..."
+				CommandLine="&quot;$(TargetPath)&quot; /install"
 			/>
 		</Configuration>
 		<Configuration
@@ -313,7 +310,7 @@
 			/>
 			<Tool
 				Name="VCResourceCompilerTool"
-				PreprocessorDefinitions="NDEBUG"
+				PreprocessorDefinitions="WIN64;NDEBUG"
 			/>
 			<Tool
 				Name="VCPreLinkEventTool"
@@ -326,13 +323,15 @@
 				EnableCOMDATFolding="2"
 				OptimizeForWindows98="1"
 				TargetMachine="17"
+				KeyFile="$(SolutionDir)..\$(ProjectName)\$(ProjectName).snk"
+				DelaySign="true"
 			/>
 			<Tool
 				Name="VCALinkTool"
 			/>
 			<Tool
 				Name="VCManifestTool"
-				AssemblyIdentity="Shareaza.SkinInstaller, processorArchitecture=amd64, version=1.0.12.5, type=win32, publicKeyToken=dfbe2673baf698eb"
+				InputResourceManifests="$(TargetPath)"
 			/>
 			<Tool
 				Name="VCXDCMakeTool"
